--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -23,7 +23,8 @@ on:
     branches:
       - master 
     # paths:
-    #   - '.github/workflows/test-coverage.yaml'    
+    #   - '.github/workflows/test-coverage.yaml'   
+  workflow_dispatch:     
 jobs:
   coverage:
     runs-on: ubuntu-latest
