--- a/webv2/config.json
+++ b/webv2/config.json
@@ -1,5 +1,5 @@
 {
-  "GCPProjectID": "vivekyadav-1731900261",
-  "SpannerProjectID": "vivekyadav-1731900261",
-  "SpannerInstanceID": "spanner-demo"
+  "GCPProjectID": "",
+  "SpannerProjectID": "",
+  "SpannerInstanceID": ""
 }
